tekton-dashboard/tekton-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.7.1
    dashboard.tekton.dev/release: v0.7.1
    version: v0.7.1
  name: tekton-dashboard
  namespace: openshift-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: default
      app.kubernetes.io/name: dashboard
      app.kubernetes.io/part-of: tekton-dashboard
  template:
    metadata:
      labels:
        app: tekton-dashboard
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: default
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/part-of: tekton-dashboard
        app.kubernetes.io/version: v0.7.1
      name: tekton-dashboard
    spec:
      containers:
      - args:
        - --port=9097
        - --web-dir=/var/run/ko
        - --csrf-secure-cookie=false
        - --logout-url=/oauth/sign_out
        - --pipelines-namespace=openshift-pipelines
        - --triggers-namespace=openshift-pipelines
        image: gcr.io/tekton-releases/github.com/tektoncd/dashboard/cmd/dashboard@sha256:4c1d0c9d3bd805c07f57ae6974bc7179b03d67fa83870ea8a71415d19c261a38
        livenessProbe:
          httpGet:
            path: /health
            port: 9097
        name: tekton-dashboard
        ports:
        - containerPort: 9097
        readinessProbe:
          httpGet:
            path: /readiness
            port: 9097
      - args:
        - --https-address=:8443
        - --provider=openshift
        - --skip-provider-button=true
        - --openshift-service-account=tekton-dashboard
        - --upstream=http://localhost:9097
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --cookie-secret=SECRET
        - --skip-auth-regex=^/v1/extensions/.*\.js
        image: openshift/oauth-proxy@sha256:6bc1759a3202b4614739f12441461e344907f6b3f758c34314284debe36d4e15
        imagePullPolicy: IfNotPresent
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: public
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - mountPath: /etc/tls/private
          name: proxy-tls
      securityContext:
        runAsNonRoot: true
      serviceAccountName: tekton-dashboard
      volumes:
      - name: proxy-tls
        secret:
          secretName: proxy-tls
