tekton-dashboard/tekton-dashboard-internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-dashboard-internal
    dashboard.tekton.dev/release: v0.7.1
    version: v0.7.1
  name: tekton-dashboard-internal
  namespace: openshift-pipelines
spec:
  ports:
  - name: http
    port: 9097
    protocol: TCP
    targetPort: 9097
  selector:
    app: tekton-dashboard
