tekton-dashboard/tekton-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
  labels:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
    app.kubernetes.io/version: v0.7.1
    dashboard.tekton.dev/release: v0.7.1
    version: v0.7.1
  name: tekton-dashboard
  namespace: tekton-dashboard
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: tekton-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
