tekton-dashboard/tekton-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-dashboard
  namespace: tekton-dashboard
spec:
  host: tekton.baloise.dev
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: tekton-dashboard
